public class Properties
{
    // Animation names (Parameters)
    public static string VELOCITY_X = "velocityX";
    public static string VELOCITY_Z = "velocityZ";
    public static string IS_DRIVING = "isDriving";
    public static string IS_IN_SHOOTING_ARENA = "isInShootingArena";
    public static string ENEMY_SPEED = "Speed";

    // Player
    public static string PLAYER_GAMEOBJECT_NAME = "Player";
    public static int PLAYER_LAYER = 9;

    // Enemy
    public static string ENEMY_GAMEOBJECT_NAME = "Enemy";
    public static int ENEMY_LAYER = 10;

    // ShootingBuilding
    public static string SHOOTING_BUILDING_GAMEOBJECT_NAME = "ShootingBuilding";
    public static string BULLET_TRACER_GAMEOBJECT_NAME = "BulletTracer";
    public static string WAYPOINTS_GAMEOBJECT_NAME = "Waypoints";
    public static string BUTTON_DECREMENT_GAMEOBJECT_NAME = "Button_Decrement";
    public static string BUTTON_INCREMENT_GAMEOBJECT_NAME = "Button_Increment";
    public static string BUTTON_ARENA_ENTER_GAMEOBJECT_NAME = "Button_Arena_Enter";
    public static string BUTTON_ARENA_EXIT_GAMEOBJECT_NAME = "Button_Arena_Exit";
    public static string BUTTON_BUILDING_ENTER_GAMEOBJECT_NAME = "Button_Building_Enter";
    public static string BUTTON_BUILDING_EXIT_GAMEOBJECT_NAME = "Button_Building_Exit";
    public static string DESIRED_ENEMY_COUNT = "DesiredEnemyCount";
}
